try fixing last section scroll issue on mobile

--- a/style.css
+++ b/style.css
@@ -156,3 +156,9 @@ p {
   animation: fadeIn 1s ease-in-out forwards;
   animation-delay: 0.5s;
 }
+
+section.content:last-child {
+  min-height: 100vh;
+  height: auto;
+  max-height: -webkit-fill-available; /* for iOS support */
+}
